Modificando docker e o .env

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Configurações de Domínio
 N8N_HOST=luantohome.ddns.net/n8n
-EVOLUTION_HOST=luantohome.ddns.net/evo
+EVOLUTION_HOST=luantohome.ddns.net
 N8N_PROTOCOL=https
 
 # Configurações do PostgreSQL
