--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     image: n8nio/n8n:latest
     container_name: n8n
     environment:
-      - N8N_HOST=${N8N_HOST}
+      - N8N_HOST=luantohome.ddns.net
       - N8N_PORT=5678
       - N8N_PROTOCOL=${N8N_PROTOCOL}
       - N8N_BASIC_AUTH_ACTIVE=true
@@ -60,6 +60,7 @@ services:
       - QUEUE_BULL_REDIS_PORT=6379
       - QUEUE_BULL_REDIS_DB=2
       - N8N_PATH=/n8n/
+      - N8N_ALLOW_DEFAULT_ORIGIN=true
       - N8N_EDITOR_BASE_URL=https://${N8N_HOST}/
       - WEBHOOK_URL=https://${N8N_HOST}/
       - GENERIC_TIMEZONE=America/Sao_Paulo
@@ -92,7 +93,7 @@ services:
     environment:
       - AUTHENTICATION_API_KEY=${AUTHENTICATION_API_KEY}
       - SERVER_URL=https://${EVOLUTION_HOST}
-      #- MANAGER_URL=https://${EVOLUTION_HOST}/manager
+      - MANAGER_URL=https://${EVOLUTION_HOST}/manager
       - DEL_INSTANCE=false
       - DATABASE_ENABLED=true
       - DATABASE_PROVIDER=postgresql
