Atualizando o n8n para versão 1.104.1, com erros

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Configurações de Domínio
 N8N_HOST=luantohome.ddns.net/n8n
-EVOLUTION_HOST=luantohome.ddns.net
+EVOLUTION_HOST=luantohome.ddns.net/evo
 N8N_PROTOCOL=https
 
 # Configurações do PostgreSQL
