Update .env para subdomínios

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Configurações de Domínio
-N8N_HOST=luantohome.ddns.net/n8n
-EVOLUTION_HOST=luantohome.ddns.net/evo
+N8N_HOST=n8n.luanlucas.online
+EVOLUTION_HOST=evo.luanlucas.online
 N8N_PROTOCOL=https
 
 # Configurações do PostgreSQL
@@ -15,4 +15,3 @@ N8N_BASIC_AUTH_PASSWORD=n8n_pass
 # Configurações da Evolution API
 AUTHENTICATION_API_KEY=NM5PRPTXWNH47NO809H1DHH4
 CONFIG_SESSION_PHONE_VERSION=2.3000.1024551647
-
