Update .env setando o dominínio geral

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 # Configurações de Domínio
-N8N_HOST=n8n.luanlucas.online
-EVOLUTION_HOST=evo.luanlucas.online
+DOMAIN=luanlucas.online
 N8N_PROTOCOL=https
 
 # Configurações do PostgreSQL
